# fem-heat-simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompileMexFile.m  HeatSimulation.sln  HeatSimulationConfig.cmake  MEX_Heat_Simulation.mexa64  MEX_Heat_Simulation.mexw64  MEX_Heat_Simulation_MultiStep.mexa64  MEX_Heat_Simulation_MultiStep.mexw64  MexFileTest.asv  MexFileTest.m  README.md  amgx_config.json  amgx_config.txt
FEM_SimulatorTests/: FEM_SimulatorTests.cpp  FEM_SimulatorTests.vcxproj  FEM_SimulatorTests.vcxproj.filters
HeatSimulation/: CMakeLists.txt  FEM_Simulator.asv  FEM_Simulator.cpp  FEM_Simulator.h  HeatSimulation.cpp  HeatSimulation.vcxproj  HeatSimulation.vcxproj.filters  MEX_Heat_Simulation.cpp
HelperScripts/: compileMex.sh  runCppMain.sh  run_mexTimeTest.sh
MATLAB/: MexFileTimeTest.m
MATLAB/+ShapeFunctions/: ShapeBase.m  getShape.m
MATLAB/+ShapeFunctions/+hex8/: Hex8.m
MATLAB/+ShapeFunctions/+tet10/: Tet10.m
MATLAB/+ShapeFunctions/+tet4/: Tet4.m
MATLAB/@HeatSimulator/: HeatSimulator.m  plotVolume.m
MATLAB/@Laser/: Laser.m
MATLAB/@Mesh/: Mesh.m
MATLAB/@ThermalModel/: ThermalModel.m  plotVolume.m
MATLAB/TestCode/: MeshDensityComparison.m  MexFileTest.m  MexFileTimeTest.m  MexParForTest.m  MexSimDensityTest.m  TetraTest.m  TimeIntegrationComparison.m  TimeIntegrationTest.m  runMexTimeTest.m
MexTesting/: CompileMexFile.m  MexFileTest.m  MexFileTimeTest.m  MexParForTest.m  MultiStepTest.m  TimeIntegrationTest.m  runMexTimeTest.m
cmake/: HeatSimulationConfig.cmake.in
include/: AmgXSolver.hpp  FEM_Simulator.h  GPUSolver.cuh  GPUTimeIntegrator.cuh  GlobalMatrices.hpp  MEX_Utility.hpp  MatrixBuilder.h  MatrixBuilder.hpp  Mesh.hpp  ThermalModel.hpp
include/ShapeFunctions/: HexLinear.hpp  TetLinear.hpp  TetQuadratic.hpp
include/TimeIntegrators/: CPUTimeIntegrator.hpp  GPUTimeIntegrator.cuh  TimeIntegrator.hpp
src/: AmgXSolver.cpp  FEM_Simulator.cpp  FEM_Simulator.h  GPUSolver.cu  GPUTimeIntegrator.cu  MEX_Heat_Simulation.cpp  MEX_Heat_Simulation_MultiStep.cpp  MatrixBuilder.cpp  Mesh.cpp  main.cpp
src/MEX/: MEX_Heat_Simulation.cpp  MEX_Heat_Simulation_MultiStep.cpp
src/ShapeFunctions/: TetLinear.cpp  TetQuadratic.cpp
src/TimeIntegrators/: CPUTimeIntegrator.cpp  GPUTimeIntegrator.cu
test/: BaseGPU.cpp  BaseSim.cpp  FEM_Unit_Tests.cpp  GPUSolver_Unit_Tests.cpp  MatrixBuilderTests.cpp  TestHelpers.hpp
test/ShapeFunctions/: HexLinearTests.cpp  TetLinearTests.cpp  TetQuadraticTests.cpp
